examples/bad/unkown_id_1.ez
f : Integer -> Integer;
f x = y;

main : Integer;
main = f 1;